[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[infrastructure]==1.4.2"]

[project.urls]
repository = "https://github.com/mimomattis/semoasis"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
 "nomad-catalysis @ git+https://github.com/FAIRmat-NFDI/nomad-catalysis-plugin.git@main",
 "nomad-measurements @ git+https://github.com/FAIRmat-NFDI/nomad-measurements.git@b57bdd183445e7f7fb63729bf4c68070b136c11d",
 "nomad-material-processing @ git+https://github.com/FAIRmat-NFDI/nomad-material-processing.git@a0508a2ec3c38d61276795b7809c2f94862e0398",
 "nomad-north-jupyter>=0.2.5"
]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]==1.4.2"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
